<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cronogramaItem"
        android:icon="@drawable/ic_calendar"
        android:title="@string/tab_cronograma" />

    <item
        android:id="@+id/talleresItem"
        android:icon="@drawable/ic_talleres"
        android:title="@string/tab_talleres" />

    <item
        android:id="@+id/conferenciasItem"
        android:icon="@drawable/ic_conferencia"
        android:title="@string/tab_conferencias" />
    <item
        android:id="@+id/concursosItem"
        android:icon="@drawable/ic_concursos"
        android:title="@string/tab_concursos" />
    <item
        android:id="@+id/infoItem"
        android:icon="@drawable/ic_info"
        android:title="@string/tab_informacion" />

</menu>
