<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Details.DetailsTaller1">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appbarDt"
        android:layout_height="@dimen/appbarlayout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:id="@+id/collapsingToolbarDt"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imagenTallerDt"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:background="@drawable/image"
                android:transitionName="@string/transition_imagentalleres"/>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:id="@+id/toolbarDt"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/usernameDt"
                        android:textSize="@dimen/textsize_usernameDetails"
                        android:text="@string/ponente_card"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/precioDt"
                            android:textSize="@dimen/disponibilidad_textsize"
                            android:text="30"
                            />
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/duracionDt"
                            android:paddingLeft="@dimen/firstword_marginleft_card"
                            android:textSize="@dimen/disponibilidad_textsize"
                            android:text="@string/disponiblesDetails"
                            />

                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/titleDt"
                        android:paddingTop="@dimen/paddingtop_titleimageDetails"
                        android:textSize="@dimen/disponibilidad_textsize"
                        android:text="@string/username_card"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        />
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/descripcionDt"

                        android:textSize="@dimen/disponibilidad_textsize"
                        android:text="@string/lorep_ipsun"
                        android:layout_gravity="center_horizontal"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>




        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatTaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appbarDt"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_mas" />
    
</android.support.design.widget.CoordinatorLayout>