<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details.DetailsConcursos">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appbarCt"
        android:layout_height="@dimen/appbarlayout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:id="@+id/collapsingToolbarCt"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imagenConcursosDt"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:background="@drawable/image"
                android:transitionName="@string/transition_imagentalleres"/>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:id="@+id/toolbarCt"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tituloConcursosDt"
                android:textSize="@dimen/textsize_usernameDetails"
                android:text="@string/ponente_card"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider"
                android:background="@android:color/darker_gray"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/descripcionConcursosDt"
                android:paddingTop="@dimen/paddingtop_titleimageDetails"
                android:paddingRight="@dimen/paddingtop_titleimageDetails"
                android:paddingLeft="@dimen/paddingtop_titleimageDetails"
                android:textSize="@dimen/disponibilidad_textsize"
                android:text="@string/lorep_ipsun"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>